# Safety-Certified-Federated-Aggregation-

./: .gitignore  README.md  pyproject.toml  requirements.txt
results/: evaluation_report.txt  novelty_validation_report.txt  real_evaluation_results.json
sca/: __init__.py
sca/certificate/: __init__.py  acceptance.py  certificate.py
sca/experiments/: __init__.py  attacks.py  baselines.py  benchmarks.py  evaluation.py  metrics.py  run_experiment.py  run_neurips_exp1.py  run_neurips_exp2.py  run_neurips_exp3.py  run_novelty_validation.py  run_real_evaluation.py
sca/federated/: __init__.py  aggregation.py  client.py  server.py
sca/knowledge_graph/: __init__.py  embedding.py  mkg.py  regions.py
sca/utils/: __init__.py  crypto.py  stats.py
sca/verifier/: __init__.py  mutations.py  rlm_verifier.py  safety_predicate.py
tests/: test_aggregation.py  test_attacks_extended.py  test_benchmarks.py  test_certificate.py  test_crypto.py  test_evaluation.py  test_mkg.py  test_stats.py  test_verifier.py
