[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "sca"
version = "0.1.0"
description = "Safety-Certified Federated Aggregation via Recursive Language Model Verification and Knowledge-Graph Coverage"
readme = "README.md"
requires-python = ">=3.9"
license = {text = "MIT"}
dependencies = [
    "numpy>=1.21",
    "torch>=2.0",
    "scikit-learn>=1.0",
    "networkx>=2.6",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
