[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "sca"
version = "0.2.0"
description = "Safety-Certified Federated Aggregation via Recursive Adaptive Verification and Knowledge-Graph Coverage"
readme = "README.md"
requires-python = ">=3.9"
license = {text = "MIT"}
dependencies = [
    "numpy>=1.21,<2.0",
    "torch>=2.0,<3.0",
    "scikit-learn>=1.0,<2.0",
    "networkx>=2.6,<4.0",
    "scipy>=1.7",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
]
llm = [
    "anthropic>=0.30",
    "openai>=1.0",
]
embeddings = [
    "sentence-transformers>=2.2",
]
full = [
    "sca[llm,embeddings]",
    "transformers>=4.30",
    "datasets>=2.14",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
